err/excel2table.err
Listing '.'...
Listing './bin'...
Compiling './bin/runxlrd.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/csvtotable'...
Listing './lib/python3.5/site-packages/csvtotable/templates'...
Listing './lib/python3.5/site-packages/csvtotable/templates/js'...
Listing './lib/python3.5/site-packages/excel2table'...
Listing './lib/python3.5/site-packages/excel2table/templates'...
Listing './lib/python3.5/site-packages/excel2table/templates/js'...
Listing './lib/python3.5/site-packages/excel2table-2.2.1.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/lml'...
Listing './lib/python3.5/site-packages/lml-0.0.1.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyexcel'...
Listing './lib/python3.5/site-packages/pyexcel/docstrings'...
Listing './lib/python3.5/site-packages/pyexcel/ext'...
Listing './lib/python3.5/site-packages/pyexcel/internal'...
Listing './lib/python3.5/site-packages/pyexcel/internal/docstrings'...
Listing './lib/python3.5/site-packages/pyexcel/internal/sheets'...
Listing './lib/python3.5/site-packages/pyexcel/plugins'...
Listing './lib/python3.5/site-packages/pyexcel/plugins/parsers'...
Listing './lib/python3.5/site-packages/pyexcel/plugins/renderers'...
Listing './lib/python3.5/site-packages/pyexcel/plugins/sources'...
Listing './lib/python3.5/site-packages/pyexcel/plugins/sources/pydata'...
Listing './lib/python3.5/site-packages/pyexcel/renderers'...
Listing './lib/python3.5/site-packages/pyexcel/sheets'...
Listing './lib/python3.5/site-packages/pyexcel/sources'...
Listing './lib/python3.5/site-packages/pyexcel-0.5.7.dist-info'...
Listing './lib/python3.5/site-packages/pyexcel_io'...
Listing './lib/python3.5/site-packages/pyexcel_io/database'...
Listing './lib/python3.5/site-packages/pyexcel_io/database/exporters'...
Listing './lib/python3.5/site-packages/pyexcel_io/database/importers'...
Listing './lib/python3.5/site-packages/pyexcel_io/readers'...
Listing './lib/python3.5/site-packages/pyexcel_io/writers'...
Listing './lib/python3.5/site-packages/pyexcel_io-0.5.6.dist-info'...
Listing './lib/python3.5/site-packages/pyexcel_odsr'...
Listing './lib/python3.5/site-packages/pyexcel_odsr-0.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pyexcel_xls'...
Listing './lib/python3.5/site-packages/pyexcel_xls-0.5.5.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/texttable-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/xlrd'...
Listing './lib/python3.5/site-packages/xlrd/examples'...
Listing './lib/python3.5/site-packages/xlrd-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/xlwt'...
Listing './lib/python3.5/site-packages/xlwt-1.3.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
